infrastructure/k3s/apps/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: stock-sync
  labels:
    app.kubernetes.io/part-of: stock-sync
