infrastructure/k3s/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: stock-sync
  labels:
    app.kubernetes.io/name: stock-sync
    app.kubernetes.io/part-of: stock-sync

spec:
  ingressClassName: traefik
  rules:
    - host: stocksync.akira.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-sync-service
                port:
                  name: http
    - host: sansan.akira.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-sync-web
                port:
                  name: http
